--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     implementation 'com.github.nearchos:RobutEV3:0.0.10-alpha'
     implementation 'org.mozilla:rhino:1.7.12'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
